# flutter_ncnn_yolov8_seg

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: segment-n-100-sim-opt-int8.param  segment-n-100-sim-opt.param  yolov8n-seg-sim-opt.param
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ncnn_yolov8_seg_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: flutter_ncnn_yolov8_seg.podspec
ios/Classes/: flutter_ncnn_yolov8_seg.c
lib/: flutter_ncnn_yolov8_seg.dart  flutter_ncnn_yolov8_seg_bindings_generated.dart
src/: CMakeLists.txt  flutter_ncnn_yolov8_seg.cc  flutter_ncnn_yolov8_seg.h
